fixxed side scrolling on small devices

--- a/med-website/src/app/picture-boxes/picture-boxes.component.scss
+++ b/med-website/src/app/picture-boxes/picture-boxes.component.scss
@@ -32,9 +32,13 @@ mat-card {
     background: $primary-color;
     color: white;
     margin: 1rem .5rem 1rem .5rem;
+    max-width: 95%;
 
   }
   
+  img {
+    max-width: 100%;
+  }
 
   mat-card-content {
     margin-top: 1rem;
