--- a/med-website/src/app/picture-switch/picture-switch.component.scss
+++ b/med-website/src/app/picture-switch/picture-switch.component.scss
@@ -67,14 +67,13 @@ mat-card-content {
     background: $primary-color;
     color: white;
     margin-top: 4rem;
-    max-width: 100%;
     width: 25rem;
-
 }
 
 .image {
-    max-width: 100%;
+    width: fit-content;
     object-fit: cover;
+    
 }
 
 // .switch-a-box {
@@ -163,4 +162,5 @@ mat-card-content {
         font-size: 2.5vw;
 
     }
+    
   }
